# anchor-energy

./: CMakeLists.txt  Makefile  README.md  anchor_python.cpp  anchor_wasserstein.cpp  distance_comparison.cpp  gromov.cpp  matching.cpp  sample.py  util.cpp  util.hpp
graphs/: G1.txt  G2.txt
pytorch/: README.md  distance_comparison.py
samplein/: 1.txt  2.txt
